# werkzeug

./: .clang-format  .gitignore  CMakeLists.txt  readme.md  werkzeug.natvis
include/werkzeug/: C_api_interfacing.hpp  assertion.hpp  compressed_pair.hpp  concepts.hpp  expected.hpp  explicit.hpp  fixed_string.hpp  inheritance_variant.hpp  iterator.hpp  manual_lifetime.hpp  memo.hpp  nested_member_pointer.hpp  optional.hpp  overload.hpp  parameter_pack.hpp  parsing.hpp  state_machine.hpp  timing.hpp  traits.hpp  type_constant.hpp  type_erased_object.hpp
include/werkzeug/algorithm/: analysis_tools.hpp  constexpr_math.hpp  hash.hpp  invoke.hpp  iteration.hpp  minmax_finder.hpp  range_transfer.hpp  ranges.hpp  sorting.hpp  static_for.hpp
include/werkzeug/container/: crtp_range_bases.hpp  dynamic_array.hpp  function.hpp  list.hpp  polymorphic_list.hpp  stack_dynamic_array.hpp  string.hpp
include/werkzeug/container/detail/: dll_node.hpp
include/werkzeug/memory/: actions.hpp  allocator.hpp  common.hpp  concepts.hpp  growth_strategies.hpp  interfaces.hpp  operator_new.hpp  resource.hpp  shared_ptr.hpp  unique_ptr.hpp
include/werkzeug/random/: RNG.hpp
include/werkzeug/random/detail/: defaults.hpp  distributions.hpp  generators.hpp
include/werkzeug/simple_vector_implementation/: vector_no_allocator.hpp  vector_std_allocator.hpp
include/werkzeug/tables/: array_nd.hpp  axis_tick_array_nd.hpp  bounded_array_nd.hpp  interpolating_tables.hpp
tests/: CMakeLists.txt  test.cpp  test_c_api_interfacing.cpp  test_dynamic_array.cpp  test_expected.cpp  test_inheritance_variant.cpp  test_interpolating_tables.cpp  test_list.cpp  test_manual_lifetime.cpp  test_memoizing_function.cpp  test_nested_member_pointer.cpp  test_parameter_pack.cpp  test_parser.cpp  test_polymorphic_list.cpp  test_sorting.cpp  test_stack_dynamic_array.cpp  test_state_machine.cpp  test_type_erased_object.cpp  test_unique_ptr.cpp  testing_utilities.hpp
